Fix typescript version and dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ZeckoV2</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Zecko Version 2 Web Application"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>ZeckoV2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
