--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,14 @@
       content="Zecko Version 2 Web Application"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <title>ZeckoV2</title>
   </head>
   <body>
